@@ -1,3 +1,7 @@
+2012-6-30  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
+    * DESCRIPTION (Version, Date): 0.03-07
+    * R/as.bugs.array2: fix the code where array() meets dimension = NULL
+
 2012-1-28  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
     * DESCRIPTION (Version, Date): 0.03-06.(Thanks to Ben Bolker)
     * R/jags: 
